--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,42 @@
-ame: RDP-VPS
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
 
-on: workflow_dispatch
+orbs:
+  # The Node.js orb contains a set of prepackaged CircleCI configuration you can utilize
+  # Orbs reduce the amount of configuration required for common tasks.
+  # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
+  node: circleci/node@4.7
 
 jobs:
-  build:
-
-    runs-on: windows-latest
-    timeout-minutes: 9999
-
+  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
+  build-and-test:
+    # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
+    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/node
+    docker:
+      - image: cimg/node:16.10
+    # Then run your tests!
+    # CircleCI will report the results back to your VCS provider.
     steps:
-    - name: Download Ngrok & NSSM
-      run: |
-        Invoke-WebRequest https://drive.google.com/uc?id=1Lp31uLeyIjnItbIWXNigXfxsMi7t5PUZ -OutFile ngrok.exe
-        Invoke-WebRequest https://drive.google.com/uc?id=1IiGQBz2dKWy7MnNfkelEIxNpBzWKkxX5 -OutFile nssm.exe
-    - name: Copy NSSM & Ngrok to Windows Directory.
-      run: | 
-        copy nssm.exe C:\Windows\System32
-        copy ngrok.exe C:\Windows\System32
-    - name: Connect your NGROK account
-      run: .\ngrok.exe authtoken $Env:28Ue5hwmbLhoFaWhbDaalTwjGsV_62jcNuVDuBsa2jcDXRzT5
-      env:
-        NGROK_AUTH_TOKEN: ${{ 28Ue5hwmbLhoFaWhbDaalTwjGsV_62jcNuVDuBsa2jcDXRzT5 }}
-    - name: Download Important Files.
-      run: |
-        Invoke-WebRequest https://drive.google.com/uc?id=13WebNaPOwCM4JdEGFnc6FkTmMRrE2KGt  -OutFile NGROK-AP.bat
-        Invoke-WebRequest https://drive.google.com/uc?id=1SRlO9RzQmhfRVR6FilyB2k4JRZaADEbA  -OutFile NGROK-CHECK.bat
-        Invoke-WebRequest https://drive.google.com/uc?id=17V_ZBSRkzNSlNG2F35F4ze8PHzZiH6_x -OutFile loop.bat
-    - name: Make YML file for NGROK.
-      run: start NGROK-AP.bat
-    - name: Enable RDP Access.
-      run: | 
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-    - name: Create Tunnel
-      run: sc start ngrok
-    - name: Connect to your RDP CPU 2 Core - 7GB Ram - 255 SSD.
-      run: cmd /c NGROK-CHECK.bat
-    - name: All Done! You can close Tab now! Maximum VM time:6h.
-      run: cmd /c loop.bat
+      # Checkout the code as the first step.
+      - checkout
+      # Next, the node orb's install-packages step will install the dependencies from a package.json.
+      # The orb install-packages step will also automatically cache them for faster future runs.
+      - node/install-packages:
+          # If you are using yarn, change the line below from "npm" to "yarn"
+          pkg-manager: npm
+      - run:
+          name: Run tests
+          command: npm start
+
+workflows:
+  # Below is the definition of your workflow.
+  # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
+  # CircleCI will run this workflow on every commit.
+  # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
+  sample:
+    jobs:
+      - build-and-test
+      # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
+      # - node/test
